Added support for preview features.